--- a/practice/Crop Yield dataset/ModelTraining.ipynb
+++ b/practice/Crop Yield dataset/ModelTraining.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Karthikeyan A\n",
+    "## 3122 21 5001 041\n",
+    "## Assignment 6\n",
+    "\n",
     "# Crop yield Prediction\n",
     "#### Dataset: https://www.kaggle.com/datasets/yaminh/crop-yield-prediction\n",
     "\n",
